--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brittney Dalby's Projects</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <header>
+        <h1>Brittney Dalby</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
     
 </body>
 </html>
