--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <h1>Brittney Dalby</h1>
         <nav>
-            <button><a href="index.html">Home</a></button>
-            <button><a href="about.html">About</a></button>
-            <button><a href="projects.html">Projects</a></button>
-            <button><a href="contact.html">Contact</a></button>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <section class="top-section">
