--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="top-header">
         <h1>Brittney Dalby</h1>
         <nav>
             <a href="index.html">Home</a>
